more changes from sc.dying in PR/55068